updated theme vars

--- a/src/frontend/src/lib/styles/theme/dark-theme.scss
+++ b/src/frontend/src/lib/styles/theme/dark-theme.scss
@@ -76,6 +76,7 @@ html[theme='dark']:root {
 	--color-border-secondary: #{$a-white-20};
 	--color-border-secondary-inverted: #{$dusk-500};
 	--color-border-tertiary: #{$a-white-10};
+	--color-border-tertiary-alt: #{$a-white-0};
 	--color-border-tertiary-inverted: #{$dusk-600};
 	--color-border-disabled: #{$a-white-5};
 	--color-border-success-solid: #{$emerald-500};
