--- a/src/frontend/src/lib/styles/theme/default-theme.scss
+++ b/src/frontend/src/lib/styles/theme/default-theme.scss
@@ -76,6 +76,7 @@ html[theme='light']:root {
 	--color-border-secondary: #{$a-dark-20};
 	--color-border-secondary-inverted: #{$gray-iron-700};
 	--color-border-tertiary: #{$a-dark-10};
+	--color-border-tertiary-alt: #{$a-dark-10};
 	--color-border-tertiary-inverted: #{$gray-iron-400};
 	--color-border-disabled: #{$a-dark-5};
 	--color-border-success-solid: #{$emerald-500};
