added missing alpha white 0 var

--- a/src/frontend/src/lib/styles/theme/base-colors.scss
+++ b/src/frontend/src/lib/styles/theme/base-colors.scss
@@ -421,6 +421,7 @@ $dusk-700: #172846;
 $dusk-800: #131e3c;
 $dusk-900: #0a182f;
 $dusk-950: #070f1c;
+$a-white-0: #ffffff00;
 $a-white-5: #ffffff0d;
 $a-white-10: #ffffff1a;
 $a-white-20: #ffffff29;
