--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -107,7 +107,7 @@ a.as-button {
 		@apply text-brand-primary bg-brand-subtle-20;
 
 		&:hover {
-			@apply bg-brand-subtle-alt;
+			@apply bg-brand-subtle-30;
 		}
 
 		&:active {
@@ -123,7 +123,7 @@ a.as-button {
 		}
 
 		&:active {
-			@apply bg-brand-subtle-alt;
+			@apply bg-brand-subtle-30;
 			color: currentColor;
 		}
 
