--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -9,6 +9,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 
 	box-sizing: border-box;
+	color: var(--color-foreground-primary);
 }
 article,
 aside,
@@ -112,11 +113,11 @@ figcaption {
 }
 
 ::selection {
-	background: var(--color-pale-cornflower-blue);
+	background: var(--color-background-brand-subtle-20);
 }
 
 ::-moz-selection {
-	background: var(--color-pale-cornflower-blue);
+	background: var(--color-background-brand-subtle-20);
 }
 
 // TODO: set the scrollbar style for Firefox too. Right now it is not ideal since the modifiable properties are limited and they go in conflict with what we set (https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_scrollbars_styling)
