--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -60,7 +60,7 @@ a {
 }
 a:not(.unstyled):active,
 a:hover {
-	//color: var(--color-blue-ribbon);
+	color: var(--color-blue-ribbon);
 }
 a:hover,
 a:focus {
