--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -1,5 +1,7 @@
 @use 'sass:meta';
 
+// We explicitly need to import Tailwind with a plain CSS @import as described in their documentation.
+// Trying to import it with Sass — such as using @use — leads to reproducibility issues.
 @import 'tailwindcss';
 
 @config '../../../../../tailwind.config.ts';
