--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -48,6 +48,7 @@
 	--secondary: var(--color-background-brand-primary);
 	--tertiary: var(--color-foreground-tertiary-inverted);
 	--positive-emphasis: var(--color-background-success-primary);
+	--negative-emphasis: var(--color-background-error-primary);
 
 	// Toast message max height is calculated based on the font-size.
 	--font-size-standard: 1rem;
