fix toasts styling

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -49,6 +49,7 @@
 	--tertiary: var(--color-foreground-tertiary-inverted);
 	--positive-emphasis: var(--color-background-success-primary);
 	--negative-emphasis: var(--color-background-error-primary);
+	--warning-emphasis: var(--color-background-warning-primary);
 
 	// Toast message max height is calculated based on the font-size.
 	--font-size-standard: 1rem;
@@ -334,6 +335,7 @@ div.checkbox {
 	}
 }
 
+// Native selects
 div.select {
 	& .icon {
 		--disable-contrast: var(--color-foreground-primary);
@@ -343,4 +345,17 @@ div.select {
 		background: var(--color-background-primary);
 		color: var(--color-foreground-primary);
 	}
+}
+
+
+
+// TOASTS
+div.error .toast {
+	--overlay-background: var(--color-background-error-subtle-20);
+}
+div.success .toast {
+	--overlay-background: var(--color-background-success-subtle-20);
+}
+div.warn .toast {
+	--overlay-background: var(--color-background-warning-subtle-20);
 }
