adjusted toast styling

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -365,15 +365,9 @@ div.select {
 }
 
 // TOASTS
+// Toasts other than error are not used
+// Also, it seems that gix components dont apply the success and warn classes correctly
 div.error .toast {
 	--overlay-background: var(--color-background-error-light);
 	--overlay-background-contrast: var(--color-foreground-error-secondary);
-}
-div.success .toast {
-	--overlay-background: var(--color-background-success-light);
-	--overlay-background-contrast: var(--color-foreground-success-secondary);
-}
-div.warn .toast {
-	--overlay-background: var(--color-background-warning-light);
-	--overlay-background-contrast: var(--color-foreground-primary);
 }
